# TimeSeries-AlcoholSales

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.yaml  main.py  pyproject.toml  tests.py
alcoholSales_app/: main_app.py
alcoholSales_app/pages/: modelViz.py  playground.py
notebooks/: 00_upload_data.ipynb  01_EDA.ipynb  02_TimeSeriesModels.ipynb  02_modeling.ipynb  04_NBeatsNet.ipynb  05_DeepAR.ipynb
notebooks/lightning_logs/version_0/: events.out.tfevents.1760983001.DESKTOP-3PAKPR4
notebooks/lightning_logs/version_0/checkpoints/: epoch=4-step=250.ckpt
notebooks/lightning_logs/version_1/: events.out.tfevents.1760983041.DESKTOP-3PAKPR4
notebooks/lightning_logs/version_1/checkpoints/: epoch=4-step=250.ckpt
src/: hyperparametrs.py  logging_config.py  modeler.py  orchestration.py  pytorchDataset.py  repository.py  retrain.py  visualizer.py
