[project]
name = "alcoholsalesproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nbeats-pytorch>=1.8.0",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "prophet>=1.1.7",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "torch>=2.9.0",
]
